--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="campo">
                 <Label for="tel">Celular</Label>
-                <input type="tel" name="tel" id="tel" placeholder="(xx) xxxxx-xxxx" pattern="([0-9]{2}) [0-9]{5}-[0-9]{4}" required>
+                <input type="tel" name="tel" id="tel" placeholder="xx xxxxx-xxxx" pattern="([0-9]{2}) [0-9]{5}-[0-9]{4}" required>
             </div>
 
            
