--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 </head>
 <body>
 
-    <div id="imagem">
-        <img src="logo.jpeg" alt="Logo da empresa Origginal Car">
+    <div class="bgimg">
+        <P> </P>
+        <P> </P>
+        <P> </P>
+        <P> </P>
+        <P> </P>
+        <P> </P>
+        <P> </P>
+        <P> </P>
     </div>
 
     
@@ -42,7 +49,7 @@
 
             <div class="campo">
                 <Label for="tel">Celular</Label>
-                <input type="tel" name="tel" id="tel" placeholder="xx xxxxx-xxxx" pattern="([0-9]{2}) [0-9]{5}-[0-9]{4}" required>
+                <input type="tel" name="tel" id="tel" placeholder="xx xxxxx-xxxx" pattern="([0-9]{2}) [0-9]{9}" required>
             </div>
 
            
