--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <div class="campo">
                 <Label for="tel">Celular</Label>
-                <input type="tel" name="tel" id="tel" placeholder="xx xxxxx-xxxx" pattern="[0-9]{11}" required>
+                <input type="tel" name="tel" id="tel" placeholder="xxxxxxxxxxx" pattern="[0-9]{11}" required>
             </div>
 
            
