--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="campo">
                 <Label for="servicos">Serviços</Label>
                 <select id="servicos" name="servicos" onchange="return mcor()" required>
-                    <option selected disabled>...Selecione uma Opção...</option>
+                    <option selected disabled></option>
                     <option>Pintura</option>
                     <option>Funilaria</option>
                     <option>Pintura e Funilaria</option>
@@ -78,7 +78,7 @@
             <div hidden="true" id="dcor">
                 <label for="cor">Cor</label>
                 <select name="cor" id="cor" onchange="return mcores()">
-                    <option selected disabled>...Selecione uma Opção...</option>
+                    <option selected disabled></option>
                     <option>Prata</option>
                     <option>Vermelho</option>
                     <option>Cinza</option>
@@ -90,7 +90,7 @@
             <div hidden id="tprata">
                 <label for="stprata">Tom de Prata</label>
                 <select name="tprata" id="stprata" onchange="return outracorpr()">
-                        <option selected disabled>...Selecione uma Opção...</option>
+                        <option selected disabled></option>
                     <div>
                         <option>Prata Switchblade</option>
                     </div>
@@ -144,7 +144,7 @@
             <div hidden id="tred">
                 <label for="stred">Tom de Vermelho</label>
                 <select name="tred" id="stred" onchange="outracorr()">
-                        <option selected disabled>...Selecione uma Opção...</option>
+                        <option selected disabled></option>
                     <div>
                         <option>Vermelho Carmim</option>
                         <option>Vermelho Chili</option>
@@ -201,7 +201,7 @@
             <div hidden id="tcinza">
                 <label for="stcinza">Tom de Cinza</label>
                 <select name="tcinza" id="stcinza" onchange="outracorc()">
-                        <option selected disabled>...Selecione uma Opção...</option>
+                        <option selected disabled></option>
                     <div>
                         <option>Cinza Graphite</option>
                         <option>Cinza Satin Steel</option>
@@ -255,7 +255,7 @@
             <div hidden id="tpreto">
                 <label for="stpreto">Tom de Preto</label>
                 <select name="tpreto" id="stpreto" onchange="return outracorpt()">
-                        <option selected disabled>...Selecione uma Opção...</option>
+                        <option selected disabled></option>
                     <div>
                         <option>Preto Ouro Negro</option>
                         <option>Preto Global</option>
@@ -306,7 +306,7 @@
             <div hidden id="tbranco">
                 <label for="stbranco">Tom de Branco</label>
                 <select name="tbranco" id="stbranco" onchange="outracorb()">
-                        <option selected disabled>...Selecione uma Opção...</option>
+                        <option selected disabled></option>
                     <div>
                         <option>Branco Summit</option>
                         <option>Branco Abalone</option>
